feat: ProcessMonitor com todas flags CLI
- -d/--decompress extrai ZIPs
- -q/--quarantine auto-quarentena
- -t <seg> intervalo
- <path> escaneia diretorio